Se arreglaron las urls

--- a/src/components/widgets/Info.astro
+++ b/src/components/widgets/Info.astro
@@ -15,7 +15,7 @@
   
     <img
       alt=""
-      src="../../public/img/students-head-to-class.jpg"
+      src="/img/students-head-to-class.jpg"
       class="h-full w-full object-cover sm:h-[calc(100%_-_2rem)] sm:self-end sm:rounded-ss-[30px] md:h-[calc(100%_-_4rem)] md:rounded-ss-[60px]"
     />
   </section>
