--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -19,7 +19,7 @@
               <img
                 id="banner"
                 class="h-full w-full object-cover object-center"
-                src="../../public/img/students.jpg"
+                src="/img/students.jpg"
                 alt=""
               />
             </div>
