--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@ declare const active: string;
     <div class="max-w-[120rem] text-gray-50 px-6 md:px-8 lg:px-10">
       <nav class="w-full flex flex-row items-center font-sans">
         <a class="text-gray-50" href="/">
-          <img src="../../public/img/logo.svg" alt="ScheduleMaster Logo" class="small-logo">
+          <img src="/img/logo.svg" alt="ScheduleMaster Logo" class="small-logo">
         </a>
         <div class="flex-1 relative hidden md:flex items-center justify-center">
           <ul class="mx-auto inline-flex gap-6 text-sm font-light">
@@ -36,10 +36,10 @@ declare const active: string;
               <a class="" href="/" id="inicio" data-active="inicio">Inicio</a>
             </li>
             <li>
-              <a href="./about-us" id="who" data-active="who">¿Quiénes Somos?</a>
+              <a href="/about-us" id="who" data-active="who">¿Quiénes Somos?</a>
             </li>
             <li>
-              <a href="./contact-us" id="contact" data-active="contact">Contáctanos</a>
+              <a href="/contact-us" id="contact" data-active="contact">Contáctanos</a>
             </li>
           </ul>
           <ul class="absolute right-0">
