--- a/src/components/widgets/Stats.astro
+++ b/src/components/widgets/Stats.astro
@@ -1,5 +1,15 @@
 ---
-    
+    // Definir el tipo de los datos
+    interface FactItem {
+        label: string;
+        value: string;
+    }
+
+    const datas: FactItem[] = [
+        { label: 'Universidades', value: '+200' },
+        { label: 'Países', value: '+40' },
+        { label: 'Optimización', value: '75%' }
+    ];
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -20,48 +30,17 @@
   <div class="mx-0 w-full h-15 px-0 py-1 md:px-0 md:py-24 lg:py-32">
     <!-- Facts Content -->
     <div class="mx-auto grid gap-6 bg-[#f2f2f7] px-20 py-8 sm:grid-cols-3 lg:grid-cols-3" id="stats">
+        {datas.map((data) => (
+                <div class="flex flex-col items-center justify-center">
+                    <p class="text-sm uppercase text-gray-300">{data.label}</p>
+                    <h4 class="text-2xl font-bold text-[#276ef1] md:text-3xl">{data.value}</h4>
+                </div>
+
+        ))}
+    
     </div>
   </div>
 </section>
-<script>
-    // Asegurarse de que el script se ejecute después de que el DOM esté cargado
-    document.addEventListener('DOMContentLoaded', function() {
-        // Definir el tipo de los datos
-        interface FactItem {
-            label: string;
-            value: string;
-        }
 
-        // Datos para los items
-        const data: FactItem[] = [
-            { label: 'Universidades', value: '+200' },
-            { label: 'Países', value: '+40' },
-            { label: 'Optimización', value: '75%' }
-        ];
-
-        // Función para generar el HTML de cada item
-        function generateItemHTML(item: FactItem): string {
-            return `
-                <!-- Facts Item -->
-                <div class="flex flex-col items-center justify-center">
-                    <p class="text-sm uppercase text-gray-300">${item.label}</p>
-                    <h4 class="text-2xl font-bold text-[#276ef1] md:text-3xl">${item.value}</h4>
-                </div>
-            `;
-        }
-
-        // Elemento contenedor
-        const container = document.getElementById('stats');
-
-        // Verificar si el contenedor existe antes de continuar
-        if (container) {
-            // Generar items y agregar al contenedor
-            data.forEach((item: FactItem) => {
-                const itemHTML = generateItemHTML(item);
-                container.innerHTML += itemHTML;
-            });
-        }
-    });
-</script>
 </body>
 </html>
