Se arreglaron urls

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -42,7 +42,7 @@
                   <div class="md:flex-row flex-col flex gap-4">
                     <button
                       class="inline-block text-base font-medium px-12 py-2 bg-accent-400 rounded-lg cursor-pointer"
-                      ><a href="./sign-up">¡Empecemos!</a></button
+                      ><a href="/sign-up">¡Empecemos!</a></button
                     >
                     <button
                       class="inline-block text-base font-medium px-12 py-2 border border-accent-400 rounded-lg text-accent-400 cursor-pointer bg-gray-0/10 backdrop-blur-3xl"
