--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,7 +44,7 @@ declare const active: string;
           </ul>
           <ul class="absolute right-0">
             <li class="relative">
-              <a class="h-8 rounded-lg flex items-center justify-center text-base bg-accent-500 leading-none px-5" href="./sign-in">Inicia Sesión!</a>
+              <a class="h-8 rounded-lg flex items-center justify-center text-base bg-accent-500 leading-none px-5" href="/sign-in">Inicia Sesión!</a>
             </li>
           </ul>
         </div>
