--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -37,7 +37,7 @@
                 <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="https://www.github.com/creativetimofficial?ref=njs-profile">Blog</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="./FAQ">FAQ</a>
+                <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="/FAQ">FAQ</a>
               </li>
             </ul>
           </div>
