--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,13 +28,13 @@
             <span class="block uppercase text-white text-sm font-semibold mb-2">Links Útiles</span>
             <ul class="list-unstyled">
               <li>
-                <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">Sobre Nosotros</a>
+                <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="/about-us">Sobre Nosotros</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="https://blog.creative-tim.com?ref=njs-profile">Nuestros Planes</a>
+                <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="">Nuestros Planes</a>
               </li>
               <li>
-                <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="https://www.github.com/creativetimofficial?ref=njs-profile">Blog</a>
+                <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="">Blog</a>
               </li>
               <li>
                 <a class="text-gray-400 hover:text-gray-200 font-semibold block pb-2 text-sm" href="/FAQ">FAQ</a>
