--- a/src/pages/sign-up.astro
+++ b/src/pages/sign-up.astro
@@ -15,7 +15,7 @@
     <!--- more free and premium Tailwind CSS components at https://tailwinduikit.com/ --->
     
                 <div class="flex flex-col items-center justify-center">
-                    <img src="../../public/img/logo.svg" alt="ScheduleMaster Logo" style="height: 50px">
+                    <img src="/img/logo.svg" alt="ScheduleMaster Logo" style="height: 50px">
     
                     <div class="bg-white shadow rounded lg:w-1/3  md:w-1/2 w-full p-10 mt-16">
                         <p tabindex="0" class="focus:outline-none text-2xl font-extrabold leading-6 text-gray-800">Sign Up</p>
